# pi-tm1638-lgpio

./: .gitignore  README.md  README_ja.md  config.h.in  configure  configure.ac
examples/: Makefile.am  buttons.c  clock.c  hello.c
src/: Makefile.am  tm1638.c
